--- a/frontend/src/paginas/Home/home.css
+++ b/frontend/src/paginas/Home/home.css
@@ -1,110 +1,173 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: 'Arial', sans-serif;
-  }
-  
-  .Home {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-  }
-  
-  .contentor {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1200px;
-  }
-  
-  .imagem img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .separador {
-    width: 10px;
-  }
-  
-  .noticias {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-  }
-  
-  .footer {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    padding: 20px;
-    background-color: #f8f8f8;
-    position: relative;
-  }
-  
-  .footer-noticias {
-    font-size: small;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
-  
-  .suggestion-title {
-    margin-bottom: 10px;
-    font-size: 18px;
-    font-weight: bold;
-  }
-  
-  .book-carousel {
-    display: flex;
-    overflow: hidden;
-    width: 100%;
-    height: 280px; /* Adjusted height */
-    padding: 10px 0;
-    position: relative;
-  }
-  
-  .book-carousel-wrapper {
-    display: flex;
-    animation: scroll 20s linear infinite;
-    gap: 35px; /* Adjusted gap */
-    width: 500px;
-  }
-  
-  .book {
-    flex: 0 0 auto;
-    text-align: center;
-    width: 500px; /* Adjusted width */
-  }
-  
-  .book-cover {
-    width: 100%;
-    height: 120px; /* Adjusted height */
-    object-fit: cover;
-    transition: transform 0.3s ease;
-  }
-  
-  .book-title {
-    margin-top: 5px;
-    font-size: 12px; /* Adjusted font size */
-  }
-  
-  @keyframes scroll {
-    0% { transform: translateX(100%); }
-    100% { transform: translateX(calc(-100% - 230px * var(--num-books))); }
-  }
-  
-  .book-carousel-wrapper:hover .book-cover {
-    transform: scale(1.1);
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Arial', sans-serif;
+  color: #333;
+}
+
+.Home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.contentor {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.imagem {
+  flex: 1;
+}
+
+.imagem img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.texto {
+  flex: 2;
+  margin-left: 20px;
+  line-height: 1.6;
+}
+
+.texto h1 {
+  margin-bottom: 20px;
+  font-size: 2em;
+  color: #444;
+}
+
+.texto p {
+  margin-bottom: 10px;
+  font-size: 1.0em;
+  color: #666;
+}
+
+.top-books-section {
+  width: 100%;
+  max-width: 1200px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  text-align: center;
+}
+
+.top-books-section h2 {
+  margin-bottom: 20px;
+  font-size: 1.0em;
+  color: #444;
+}
+
+.top-books {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.top-book {
+  width: 150px;
+  text-align: center;
+}
+
+.top-book-cover {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.top-book-cover:hover {
+  transform: scale(1.1);
+}
+
+.top-book-title {
+  margin-top: 10px;
+  font-size: 1em;
+  color: #333;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #f8f8f8;
+  position: relative;
+}
+
+.footer-noticias {
+  font-size: small;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.suggestion-title {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #555;
+}
+
+.book-carousel {
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+  height: 200px; /* Adjusted height */
+  padding: 10px 0;
+  position: relative;
+}
+
+.book-carousel-wrapper {
+  display: flex;
+  animation: scroll 60s linear infinite;
+  gap: 60px; /* Adjusted gap */
+}
+
+.book {
+  flex: 0 0 auto;
+  text-align: center;
+  width: 200px; /* Adjusted width */
+}
+
+.book-cover {
+  width: 100%;
+  height: 100px; /* Adjusted height */
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.book-cover:hover {
+  transform: scale(1.1);
+}
+
+.book-title {
+  margin-top: 10px;
+  font-size: 10px; /* Adjusted font size */
+  font-weight: bold;
+  color: #333;
+}
+
+@keyframes scroll {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(calc(-100% - 230px * var(--num-books))); }
+}
