--- a/frontend/src/componetes/Header/header.css
+++ b/frontend/src/componetes/Header/header.css
@@ -33,7 +33,7 @@
 
 
     text-decoration: none;
-    color: #333; /* Cor do texto */
+    color: rgb(113 63 18 );
     font-size: 16px; /* Tamanho da fonte */
     font-weight: bold; /* Peso da fonte */
     padding: 8px 16px; /* Espaçamento interno */
